[gd_scene load_steps=12 format=3 uid="uid://rv1wlptx1or7"]

[ext_resource type="Script" uid="uid://d31v2vrf5wxmn" path="res://UI/Settings/settings.gd" id="1_rq80c"]
[ext_resource type="Shader" uid="uid://bavgum8g32mh" path="res://UI/Components/Blur.gdshader" id="2_yuh4y"]
[ext_resource type="Texture2D" uid="uid://br73jrkil5ywt" path="res://UI/Assets/CheckButton_Checked.webp" id="6_3hobt"]
[ext_resource type="Texture2D" uid="uid://c4q0bw75inmgc" path="res://UI/Assets/CheckButton_Uncheck.webp" id="7_bse34"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eeom4"]
shader = ExtResource("2_yuh4y")
shader_parameter/blur_amount = 5.0
shader_parameter/mix_amount = 0.5
shader_parameter/color_over = Color(0.105882, 0.109804, 0.129412, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hobt"]
bg_color = Color(0.207843, 0.211765, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bse34"]
bg_color = Color(0.164706, 0.168627, 0.188235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.227451, 0.235294, 0.266667, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_top = 5.0

[sub_resource type="Theme" id="Theme_coen6"]
PopupMenu/colors/font_color = Color(0.8, 0.8, 0.8, 1)
PopupMenu/colors/font_hover_color = Color(1, 1, 1, 1)
PopupMenu/font_sizes/font_size = 50
PopupMenu/styles/hover = SubResource("StyleBoxFlat_3hobt")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_bse34")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vu3t"]
bg_color = Color(0.172549, 0.176471, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.227451, 0.231373, 0.258824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuh4y"]
bg_color = Color(0.207843, 0.211765, 0.239216, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.231373, 0.258824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eeom4"]
bg_color = Color(0.172549, 0.176471, 0.2, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.227451, 0.231373, 0.258824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_rq80c")

[node name="background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_eeom4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.106, 0.11, 0.129, 0.6)

[node name="Settings_Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 260.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 130
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0.53, 0)
anchors_preset = -1
anchor_top = 0.273
anchor_right = 1.0
anchor_bottom = 0.723
offset_left = 80.0
offset_top = 0.839966
offset_right = -80.0
offset_bottom = 56.8398
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90

[node name="MusicButton" type="CheckButton" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 60
theme_override_icons/checked = ExtResource("6_3hobt")
theme_override_icons/unchecked = ExtResource("7_bse34")
text = "Play Sound"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Language"

[node name="LanguageButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_coen6")
theme_override_colors/font_hover_pressed_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_hover_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_focus_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_pressed_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_constants/align_to_largest_stylebox = 20
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7vu3t")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vu3t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vu3t")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vu3t")
alignment = 1
item_count = 2
popup/item_0/text = "فارسی"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="Back_Button" type="Button" parent="."]
layout_direction = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -420.0
offset_right = 222.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxFlat_yuh4y")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_yuh4y")
theme_override_styles/hover = SubResource("StyleBoxFlat_yuh4y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yuh4y")
theme_override_styles/normal = SubResource("StyleBoxFlat_eeom4")
text = "Back"
icon_alignment = 1

[connection signal="toggled" from="VBoxContainer/MusicButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/LanguageButton" to="." method="_on_language_button_item_selected"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
